무기 커스터마이즈 주석처리 제거

--- a/ERB/SHOP.ERB
+++ b/ERB/SHOP.ERB
@@ -388,7 +388,7 @@ IF CHECK_GAMEOVER_F() == 0 && FLAG:63 == 0
 	PRINT [111] 캐릭터 강화   
 	PRINT [112] 의상 설정　　 
 	PRINTL [113] 메디컬 룸
-;	PRINTL [114] 커스터마이즈 
+	PRINTL [114] 커스터마이즈 
 	PRINT [120] 의상 구입　　 
 ENDIF
 SIF FLAG:63 == 0
