完堕ち를 전락으로 번역

--- a/ERB/SHOP_FLASHNEWS.ERB
+++ b/ERB/SHOP_FLASHNEWS.ERB
@@ -133,7 +133,7 @@ IF FLAG:60 >= 10000
 						STRDATA LOCALS
 						DATAFORM 『촉수絶頂少女 ～%LOCALS%～』
 						DATAFORM 『촉수アへイキ少女 ～%LOCALS%～』
-						DATAFORM 『촉수完堕ちオナホ少女 %LOCALS%』
+						DATAFORM 『촉수전락オナホ少女 %LOCALS%』
 						DATAFORM 『触孕姫誕生 ～%LOCALS%～』
 						DATAFORM 『気になるあの娘は촉수の花嫁 ～%LOCALS%～』
 						DATAFORM 『わたし、촉수様の苗床になりました ～%LOCALS%～』
