--- a/ERB/게임_내_이벤트발생/강제발생이벤트/FORCE_クズ市民の脅迫.ERB
+++ b/ERB/게임_내_이벤트발생/강제발생이벤트/FORCE_クズ市民の脅迫.ERB
@@ -661,7 +661,7 @@ ELSE
 		;	CALL INTIMIDATION_PIG,TARGET
 		;CASE 11 TO 15
 		;	CALL INTIMIDATION_DOG,TARGET
-		;CASE 25;&& (TALENT:TARGET:놀림받는체질 > 0 || ABL:TARGET:마조끼 > 3 || TALENT:TARGET:完堕ち > 0 )
+		;CASE 25;&& (TALENT:TARGET:놀림받는체질 > 0 || ABL:TARGET:마조끼 > 3 || TALENT:TARGET:전락 > 0 )
 		;	CALL INTIMIDATION_RYONA,TARGET
 		CASEELSE
 			;★現分岐　これそういやholyvirgin考慮してないな
