--- a/ERB/게임_내_이벤트발생/엔딩/SUCCESSION.ERB
+++ b/ERB/게임_내_이벤트발생/엔딩/SUCCESSION.ERB
@@ -1129,7 +1129,7 @@ ELSEIF RESULT == 999
 				TALENT:CCOUNT:임신 = CSVTALENT_F(NO:CCOUNT,159)
 				TALENT:CCOUNT:기생 = CSVTALENT_F(NO:CCOUNT,160)
 				TALENT:CCOUNT:묘상화 = CSVTALENT_F(NO:CCOUNT,161)
-				TALENT:CCOUNT:完堕ち = CSVTALENT_F(NO:CCOUNT,162)
+				TALENT:CCOUNT:전락 = CSVTALENT_F(NO:CCOUNT,162)
 				TALENT:CCOUNT:공생 = CSVTALENT_F(NO:CCOUNT,163)
 				TALENT:CCOUNT:배란이상 = CSVTALENT_F(NO:CCOUNT,164)
 				;고유캐릭터ならばCSVに合わせる
