--- a/ERB/게임_내_이벤트발생/특별활동이벤트.ERB
+++ b/ERB/게임_내_이벤트발생/특별활동이벤트.ERB
@@ -1591,7 +1591,7 @@ SELECTCASE ARG
 
 
 		;＠中国版より逆輸入
-		IF ISFEMALE() && (((ABL:마조끼 > 4 && ABL:욕망 > 4) || TALENT:마조기질 > 0 || (TALENT:유두피어싱 + TALENT:클리피어싱 > 5) ) && EXP:전투경험 > 0 && RAND:5 < 1) || TALENT:完堕ち > 0
+		IF ISFEMALE() && (((ABL:마조끼 > 4 && ABL:욕망 > 4) || TALENT:마조기질 > 0 || (TALENT:유두피어싱 + TALENT:클리피어싱 > 5) ) && EXP:전투경험 > 0 && RAND:5 < 1) || TALENT:전락 > 0
 			SELECTCASE EXP:전투경험
 			CASE 1 TO 15
 				PRINT 期待の
