--- a/ERB/무기및의상/의상관련/CLOTHDATA겉옷_특수.ERB
+++ b/ERB/무기및의상/의상관련/CLOTHDATA겉옷_특수.ERB
@@ -2,8 +2,8 @@
 
 ;********************************************************************************************************************
 ;CLOTH196 촉수の花嫁
-;＠中国版　변신능력無しキャラ用の完堕ち装備
-;　完全に戯けた補正が掛かっているけど、[完堕ち]取得は実質的に周回要素なので通常プレイへの影響はまあ無い…か？
+;＠中国版　변신능력無しキャラ用の전락装備
+;　完全に戯けた補正が掛かっているけど、[전락]取得は実質的に周回要素なので通常プレイへの影響はまあ無い…か？
 ;　とはいえ明らかに吹っ飛んでるので問題出そうなら後々調整する
 ;----------------------------------------------------------
 @CLOTH_DESCRIPTION_196
