--- a/ERB/지문/MESSAGE_BATTLE.ERB
+++ b/ERB/지문/MESSAGE_BATTLE.ERB
@@ -155,7 +155,7 @@ CASEELSE
 	PRINTFORML 身構えた%PRINT_TRANSCALLNAME(TARGET)%の周囲を
 ENDSELECT
 
-IF TALENT:完堕ち
+IF TALENT:전락
 	PRINTL 妖しげな紫色の霧が包み込む…
 ELSEIF TALENT:촉수의포로
 	PRINTL 蠱惑的なピンク色の光が包み込む…
@@ -176,7 +176,7 @@ IF RESULT == -1
 	PRINTL 
 	IF CFLAG:4 == 1
 		LOCALS=%CSTR:2%
-		IF TALENT:完堕ち
+		IF TALENT:전락
 			REPLACE LOCALS,"！","❤"
 		ELSEIF TALENT:촉수의포로
 			REPLACE LOCALS,"！","…❤"
@@ -201,7 +201,7 @@ IF RESULT == -1
 	PRINTL 
 	IF CFLAG:5 == 1
 		LOCALS=%CSTR:3%
-		IF TALENT:完堕ち
+		IF TALENT:전락
 			REPLACE LOCALS,"！","❤❤❤"
 		ELSEIF TALENT:촉수의포로
 			REPLACE LOCALS,"！","…❤"
