--- a/ERB/SHOP_ACTION.ERB
+++ b/ERB/SHOP_ACTION.ERB
@@ -45,7 +45,7 @@ ELSE
 		SIF CFLAG:999 == 0
 			GOTO REST
 
-		예정이 없는 경우는 휴식으로 한다
+		;예정이 없는 경우는 휴식으로 한다
 		SIF CFLAG:100 == 예정_없음
 			CFLAG:100 = 예정_휴식
 		;행동마다 줄 바꿈을 넣는다
